# raytracing-engine-in-c

./: .gitignore  FIXES.md  HOW_TO_TEST.md  Makefile  PROJECT_STATUS.md  README.md  TESTING_GUIDE.md  TEST_README.md  build.bat  build_app.bat  build_blackhole_app.bat  build_visualization.bat  debug_log.txt  demo.c  fix_build.bat  fixed_build.bat  imgui.ini  simple_build.bat  simple_test.c  test.c  test2.c  test3.c  test_all.bat  test_build.bat  test_main.c  test_math_util.c
.cursor/rules/: api.mdc  backend.mdc  performance.mdc  repair.mdc  rules.mdc
include/: blackhole_api.h  blackhole_types.h  gl.h  math_util.h  particle_sim.h  raytracer.h  spacetime.h
src/: blackhole_api.c  gl.c  main.c  math_util.c  particle_sim.c  raytracer.c  spacetime.c
src/visualization/: CMakeLists.txt  README.md  main.cpp  renderer.cpp  renderer.h
src/visualization/shaders/: ray_tracer.comp
